cmake_minimum_required(VERSION 3.23)
project(standard_libery)

set(CMAKE_CXX_STANDARD 23)

add_executable(lambda1 lang/lambda1.cpp)
add_executable(exception_test exception_test.cpp)
add_executable(pair1 util/pair1.cpp)
add_executable(tuple1 util/tuple1.cpp)
add_executable(tuple2 util/tuple2.cpp)
add_executable(sharedptr1 util/sharedptr1.cpp)
add_executable(sharedptr2 util/sharedptr2.cpp)
add_executable(sharedptr3 util/sharedptr3.cpp)
add_executable(weakptr1 util/weakptr1.cpp)
add_executable(weakptr2 util/weakptr2.cpp)
add_executable(limits1 util/limits1.cpp)
add_executable(minmax1 util/minmax1.cpp)
add_executable(ratio1 util/ratio1.cpp)
add_executable(clock util/clock.cpp)
add_executable(chrono1 util/chrono1.cpp)
add_executable(chrono2 util/chrono2.cpp)
add_executable(timepoint util/timepoint.cpp)
add_executable(vector1 stl/vector1.cpp)
add_executable(deque1 stl/deque1.cpp)
add_executable(array1 stl/array1.cpp)
add_executable(list1 stl/list1.cpp)
add_executable(list2 stl/list2.cpp)
add_executable(forwardlist1 stl/forwardlist1.cpp)
add_executable(multiset1 stl/multiset1.cpp)
add_executable(multimap1 stl/multimap1.cpp)
add_executable(unorderedmultiset1 stl/unorderedmultiset1.cpp)
add_executable(assoarray1 stl/assoarray1.cpp)
add_executable(list1old stl/list1old.cpp)
add_executable(set1 stl/set1.cpp)
add_executable(unordmultiset2 stl/unordmultiset2.cpp)
add_executable(algo1 stl/algo1.cpp)
add_executable(algo1old stl/algo1old.cpp)
add_executable(find1 stl/find1.cpp)
add_executable(copy1 stl/copy1.cpp)
add_executable(copy2 stl/copy2.cpp)