cmake_minimum_required(VERSION 3.23)
project(standard_libery)

#set(CMAKE_WARN_DEPRECATED OFF)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -v")
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")

set(CMAKE_CXX_STANDARD 17)

add_executable(lambda1 lang/lambda1.cpp)
add_executable(exception_test exception_test.cpp)
add_executable(pair1 util/pair1.cpp)
add_executable(tuple1 util/tuple1.cpp)
add_executable(tuple2 util/tuple2.cpp)
add_executable(sharedptr1 util/sharedptr1.cpp)
add_executable(sharedptr2 util/sharedptr2.cpp)
add_executable(sharedptr3 util/sharedptr3.cpp)
add_executable(weakptr1 util/weakptr1.cpp)
add_executable(weakptr2 util/weakptr2.cpp)
add_executable(limits1 util/limits1.cpp)
add_executable(minmax1 util/minmax1.cpp)
add_executable(ratio1 util/ratio1.cpp)
add_executable(clock util/clock.cpp)
add_executable(chrono1 util/chrono1.cpp)
add_executable(chrono2 util/chrono2.cpp)
add_executable(timepoint util/timepoint.cpp)
add_executable(vector1 stl/vector1.cpp)
add_executable(deque1 stl/deque1.cpp)
add_executable(array1 stl/array1.cpp)
add_executable(list1 stl/list1.cpp)
add_executable(list2 stl/list2.cpp)
add_executable(forwardlist1 stl/forwardlist1.cpp)
add_executable(multiset1 stl/multiset1.cpp)
add_executable(multimap1 stl/multimap1.cpp)
add_executable(unorderedmultiset1 stl/unorderedmultiset1.cpp)
add_executable(assoarray1 stl/assoarray1.cpp)
add_executable(list1old stl/list1old.cpp)
add_executable(set1 stl/set1.cpp)
add_executable(unordmultiset2 stl/unordmultiset2.cpp)
add_executable(algo1 stl/algo1.cpp)
add_executable(algo1old stl/algo1old.cpp)
add_executable(find1 stl/find1.cpp)
add_executable(copy1 stl/copy1.cpp)
add_executable(copy2 stl/copy2.cpp)
add_executable(ioiter1 stl/ioiter1.cpp)
add_executable(reviter1 stl/reviter1.cpp)
add_executable(print_test stl/print_test.cpp)
add_executable(remove1 stl/remove1.cpp)
add_executable(remove2 stl/remove2.cpp)
add_executable(remove3 stl/remove3.cpp)
add_executable(remove4 stl/remove4.cpp)
add_executable(transform1 stl/transform1.cpp)
add_executable(prime1 stl/prime1.cpp)
add_executable(sort1 stl/sort1.cpp)
add_executable(lambda1sdl stl/lambda1.cpp)
add_executable(sort2 stl/sort2.cpp)
add_executable(foreach2 stl/foreach2.cpp)
add_executable(add1 stl/add1.cpp)
add_executable(fo1 stl/fo1.cpp)
add_executable(bind1 stl/bind1.cpp)
add_executable(iterbug stl/iterbug.cpp)
add_executable(array1cont cont/array1.cpp)
add_executable(vector1cont cont/vector1.cpp)
add_executable(deque1cont cont/deque1.cpp)
add_executable(list1cont cont/list1.cpp)
add_executable(forwardlistfind1 cont/forwardlistfind1.cpp)
add_executable(findbefore_test cont/findbefore_test.cpp)
add_executable(forwardlistsplice1 cont/forwardlistsplice1.cpp)
add_executable(forwardlist1cont cont/forwardlist1.cpp)
add_executable(setrange1 cont/setrange1.cpp)
add_executable(set1cont cont/set1.cpp)
add_executable(multiset1cont cont/multiset1.cpp)
add_executable(setcmp1 cont/setcmp1.cpp)
add_executable(replace_key_main cont/replace_key_main.cpp)
add_executable(map1 cont/map1.cpp)
add_executable(map2 cont/map2.cpp)
add_executable(multimap1cont cont/multimap1.cpp)
add_executable(mapfind1 cont/mapfind1.cpp)
add_executable(mapcmp1 cont/mapcmp1.cpp)
add_executable(hashval_main cont/hashval_main.cpp)
add_executable(unordset1 cont/unordset1.cpp)
add_executable(unordmultiset1 cont/unordmultiset1.cpp)
add_executable(hashfunc1 cont/hashfunc1.cpp)
add_executable(hashfunc2 cont/hashfunc2.cpp)
add_executable(unordinspect1 cont/unordinspect1.cpp)
add_executable(unordmultimap1 cont/unordmultimap1.cpp)
add_executable(cstylearray1 cont/cstylearray1.cpp)
add_executable(cstylearray1old cont/cstylearray1old.cpp)
add_executable(refsem1 cont/refsem1.cpp)
add_executable(sortset cont/sortset.cpp)
add_executable(sortvec cont/sortvec.cpp)
add_executable(itercategory1 iter/itercategory1.cpp)
add_executable(advance1 iter/advance1.cpp)
add_executable(distance1 iter/distance1.cpp)
add_executable(iterswap1 iter/iterswap1.cpp)
add_executable(reviter1iter iter/reviter1.cpp)
add_executable(reviter2iter iter/reviter2.cpp)
add_executable(reviter3iter iter/reviter3.cpp)
add_executable(reviter4iter iter/reviter4.cpp)
add_executable(backinserter1 iter/backinserter1.cpp)
add_executable(frontinserter1 iter/frontinserter1.cpp)
add_executable(inserter1 iter/inserter1.cpp)
add_executable(ostreamiter1 iter/ostreamiter1.cpp)
add_executable(istreamiter1 iter/istreamiter1.cpp)
add_executable(advance2 iter/advance2.cpp)
add_executable(assoiter1 iter/assoiter1.cpp)
add_executable(sort1fo fo/sort1.cpp)
add_executable(sequence1 fo/sequence1.cpp)
add_executable(sequence2 fo/sequence2.cpp)
add_executable(foreach3 fo/foreach3.cpp)
add_executable(removeif1 fo/removeif1.cpp)
add_executable(bind1fo fo/bind1.cpp)
add_executable(compose3 fo/compose3.cpp)
add_executable(bind2 fo/bind2.cpp)
add_executable(fopow1 fo/fopow1.cpp)
add_executable(lambda1fo fo/lambda1.cpp)
add_executable(lambda2fo fo/lambda2.cpp)
add_executable(lambda3fo fo/lambda3.cpp)
add_executable(lambda4fo fo/lambda4.cpp)
add_executable(lambda5fo fo/lambda5.cpp)
add_executable(foreach1 algo/foreach1.cpp)
add_executable(foreach2algo algo/foreach2.cpp)
add_executable(foreach3algo algo/foreach3.cpp)
add_executable(count1algo algo/count1.cpp)
add_executable(minmax1algo algo/minmax1.cpp)
add_executable(find1algo algo/find1.cpp)
add_executable(find2algo algo/find2.cpp)
add_executable(search1algo algo/search1.cpp)
add_executable(search1_2algo algo/search1_2.cpp)
add_executable(search2algo algo/search2.cpp)
add_executable(findend1 algo/findend1.cpp)
add_executable(findof1 algo/findof1.cpp)
add_executable(adjacentfind1 algo/adjacentfind1.cpp)
add_executable(equal1algo algo/equal1.cpp)
add_executable(ispermutation1 algo/ispermutation1.cpp)
add_executable(mismatch1 algo/mismatch1.cpp)
add_executable(lexicocmp1 algo/lexicocmp1.cpp)
add_executable(issorted1 algo/issorted1.cpp)
add_executable(ispartitioned1 algo/ispartitioned1.cpp)
add_executable(isheap1 algo/isheap1.cpp)
add_executable(allanynone algo/allanynone.cpp)
add_executable(copy1algo algo/copy1.cpp)
add_executable(copy2algo algo/copy2.cpp)
add_executable(copy3algo algo/copy3.cpp)
add_executable(move1algo algo/move1.cpp)
add_executable(transform1algo algo/transform1.cpp)
add_executable(transform2algo algo/transform2.cpp)
add_executable(swapranges1algo algo/swapranges1.cpp)
add_executable(fill1algo algo/fill1.cpp)
add_executable(generate1algo algo/generate1.cpp)
add_executable(iota1 algo/iota1.cpp)
add_executable(replace1 algo/replace1.cpp)
add_executable(replace2 algo/replace2.cpp)
add_executable(remove1algo algo/remove1.cpp)
add_executable(remove2algo algo/remove2.cpp)
add_executable(unique1 algo/unique1.cpp)
add_executable(unique2 algo/unique2.cpp)
add_executable(unique3 algo/unique3.cpp)
add_executable(reverse1 algo/reverse1.cpp)
add_executable(rotate1 algo/rotate1.cpp)
add_executable(rotate2 algo/rotate2.cpp)
add_executable(permutation1 algo/permutation1.cpp)
add_executable(shuffle1 algo/shuffle1.cpp)
add_executable(randomshuffle1 algo/randomshuffle1.cpp)
add_executable(partition1 algo/partition1.cpp)
add_executable(partitioncopy1 algo/partitioncopy1.cpp)
add_executable(sort1algo algo/sort1.cpp)
add_executable(sort2algo algo/sort2.cpp)
add_executable(partialsort1 algo/partialsort1.cpp)
add_executable(partialsort2 algo/partialsort2.cpp)
add_executable(nthelement1 algo/nthelement1.cpp)
add_executable(heap1 algo/heap1.cpp)
add_executable(binarysearch1 algo/binarysearch1.cpp)
add_executable(includes1 algo/includes1.cpp)
add_executable(bounds1 algo/bounds1.cpp)
add_executable(equalrange1 algo/equalrange1.cpp)
add_executable(merge1 algo/merge1.cpp)
add_executable(sorted1 algo/sorted1.cpp)
add_executable(inplacemerge1 algo/inplacemerge1.cpp)
add_executable(accumulate1 algo/accumulate1.cpp)
add_executable(innerproduct1 algo/innerproduct1.cpp)
add_executable(partialsum1 algo/partialsum1.cpp)
add_executable(adjacentdiff1 algo/adjacentdiff1.cpp)
add_executable(relabs1 algo/relabs1.cpp)
add_executable(stack1 contadapt/stack1.cpp)
add_executable(stack2 contadapt/stack2.cpp)
add_executable(queue1 contadapt/queue1.cpp)
add_executable(priorityqueue1 contadapt/priorityqueue1.cpp)
add_executable(bitset1 contadapt/bitset1.cpp)
add_executable(bitset2 contadapt/bitset2.cpp)
add_executable(string1 string/string1.cpp)
add_executable(string2 string/string2.cpp)
add_executable(stringnumconv1 string/stringnumconv1.cpp)
add_executable(stringiter1 string/stringiter1.cpp)
add_executable(stringiter2 string/stringiter2.cpp)
add_executable(string3 string/string3.cpp)
add_executable(icstring string/icstring.cpp)
add_executable(regex1 regex/regex1.cpp)
add_executable(regex2 regex/regex2.cpp)
add_executable(regex3 regex/regex3.cpp)
add_executable(regexiter1 regex/regexiter1.cpp)
add_executable(regextokeniter1 regex/regextokeniter1.cpp)
add_executable(regexreplace1 regex/regexreplace1.cpp)
add_executable(regex4 regex/regex4.cpp)
add_executable(regex5 regex/regex5.cpp)
add_executable(timemanipulator1 io/timemanipulator1.cpp)
add_executable(summain1 io/summain.cpp io/sum1a.cpp)
add_executable(summain2 io/summain.cpp io/sum2a.cpp)
add_executable(charcat1 io/charcat1.cpp)
add_executable(ignore1 io/ignore1.cpp)
add_executable(ignore2 io/ignore2.cpp)
add_executable(fstream1 io/fstream1.cpp)
add_executable(fstream2 io/fstream2.cpp)
add_executable(cat1 io/cat1.cpp)
add_executable(cat2 io/cat2.cpp)
add_executable(sstream1 io/sstream1.cpp)
add_executable(sstream2 io/sstream2.cpp)
add_executable(frac1main io/frac1main.cpp)
add_executable(frac2main io/frac2main.cpp)
add_executable(streambuffer1 io/streambuffer1.cpp)
add_executable(streambuffer2 io/streambuffer2.cpp)
add_executable(streamredirect1 io/streamredirect1.cpp)
add_executable(streamreadwrite1 io/streamreadwrite1.cpp)
add_executable(charcat2 io/charcat2.cpp)
add_executable(outbuf1 io/outbuf1.cpp)
add_executable(outbuf2 io/outbuf2.cpp)
add_executable(loc1 i18n/loc1.cpp)
add_executable(loc2 i18n/loc2.cpp)
add_executable(numput i18n/numput.cpp)
add_executable(moneypunct i18n/moneypunct.cpp)
add_executable(moneyput i18n/moneyput.cpp)
add_executable(moneymanipulator i18n/moneymanipulator.cpp)
add_executable(timeput i18n/timeput.cpp)
add_executable(timeget i18n/timeget.cpp)
add_executable(wstring2string i18n/wstring2string.cpp)
add_executable(wstring2utf8 i18n/wstring2utf8.cpp)
add_executable(random1 num/random1.cpp)
add_executable(random2 num/random2.cpp)
add_executable(dist1 num/dist1.cpp)